--- a/shop/.user.ini
+++ b/shop/.user.ini
@@ -1,3 +1,3 @@
 ; Wordfence WAF
-auto_prepend_file = '/home/vczfhphf/public_html/shop/wordfence-waf.php'
+; auto_prepend_file = '/home/vczfhphf/public_html/shop/wordfence-waf.php'
 ; END Wordfence WAF
